Create Long Overdue Translate Adapter
